kubernetes/apps/ai/local-ai/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: local-ai
  namespace: ai
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - "localai.cyberglitch.systems"
  rules:
    - backendRefs:
        - name: local-ai
          port: 80
